# selenium-youtube-scrapper

./: README.md  not_needed.py  pyproject.toml  scraper.py  trending.csv  youtube_trending.html
